--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
 					}.start()</br>
 					<span class="comments">// The last thing I wanna say:</span><br />
 					System.out.println(<span class="string">"Happy Birthday!"</span>);
+                                         <br>  <br> <br> // Note: Google it if you don't understand the lines of code. 
 				</div>
 				<div id="Machi" class="is-4 column">
 					<canvas id="garden" style="display:none"></canvas>
